--- a/client/index.html
+++ b/client/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <div id="root">Welcome to Frontend</div>
-      <!--<script type="module">
+      <script type="module">
       import RefreshRuntime from "http://localhost:3000/@react-refresh";
       RefreshRuntime.injectIntoGlobalHook(window);
       window.$RefreshReg$ = () => {};
       window.$RefreshSig$ = () => (type) => type;
       window.__vite_plugin_react_preamble_installed__ = true;
       </script>
-      <script type="module" src="http://localhost:3000/src/main.jsx"></script>-->
+      <script type="module" src="http://localhost:3000/src/main.jsx"></script>
   </body>
 </html>
 
